--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
-*{
+ *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -6,10 +6,6 @@
 
 body{
     background-color: #EFE9F2;
-    /* background-attachment: fixed; */
-    /* background: #acaaaa9f; */
-    /* background-image: url(rocket_25dp_B87E9F_FILL0_wght300_GRAD0_opsz24.svg); */
-    
     background-size: 8em;
     max-width: 100%;
     height: 100%;
@@ -42,12 +38,12 @@ a{
     text-decoration: none;
     color: #F4D03F;
     cursor: grab;
-}    
-
+}
 p{
     font-family: "Quicksand", sans-serif;
     color: #EFE9F2;
 }
+
 
 .header img:active{
     transition: .1s all ease-in-out;
@@ -78,7 +74,6 @@ p{
     outline: none;
 }
 
-
 .button:active{
     transition: .1s all ease-in-out;
     opacity: .50;
@@ -101,7 +96,6 @@ p{
     text-decoration: none;
     
 }
-
 .button2:active{
     transition: .1s all ease-in-out;
     opacity: .50;
@@ -127,7 +121,6 @@ p{
     color: white;
     width: 5em;
     height: 2.75em;
-    /* padding: 15px 32px; */
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -139,7 +132,6 @@ p{
     transition: ease-out 0.5s;
     outline: none;
 }
-
 .button3:active{
     transition: .1s all ease-in-out;
     opacity: .50;
@@ -164,7 +156,6 @@ border-radius: 5px;
     position: relative;
     
 } 
-
 
 .sc img:active{
     transition: .1s all ease-in-out;
@@ -208,7 +199,6 @@ border-radius: 5px;
     background-color: #8080DA;
     color: #fff;
 }
-
 
 @media(min-width: 768px){
 
@@ -277,7 +267,6 @@ border-radius: 5px;
     }
 }
 
-
 .content h2:active{
     transition: .1s all ease-in-out;
     opacity: 1;
@@ -287,8 +276,12 @@ border-radius: 5px;
 .bg-c:active{
     transition: .1s all ease-in-out;
     opacity: .50;
+    background-color: #F4D03F;
+    margin: .25em;
+    padding: .25em;
     transform: scale(1.15);
 }
+
 
 
 .sc h2{
@@ -347,9 +340,7 @@ grid-area: footer;
         align-items: center;
         align-content: center;
         justify-content: space-around;
-        
     }
-    
     .info{
         margin-left: 2em;
     }
@@ -375,7 +366,7 @@ grid-area: footer;
         
         position: unset;
     }
-    
+
 }
 
 @media(max-width: 500px){
@@ -406,3 +397,5 @@ grid-area: footer;
     }
     
 }
+
+  
